# Everybody-codes

./: .gitignore  EverybodyCodes_All.slnx  EverybodyCodes_FSharp.slnx  README.md  Visualizations.md
EveryBodyCodes_2026_GridOS1_FSharp/: EveryBodyCodes_2026_GridOS1_FSharp.fsproj  Program.fs  add-new-entry.ps1
EveryBodyCodes_2026_GridOS1_FSharp/Modules/: LocalHelper.fs
EveryBodyCodes_2026_GridOS1_FSharp/quest00/: quest00_1.fs  quest00_2.fs  quest00_3.fs
EveryBodyCodes_2026_GridOS1_FSharp/quest01/: quest01_1.fs  quest01_2.fs  quest01_3.fs
EveryBodyCodes_2026_GridOS1_FSharp/quest02/: quest02_1.fs  quest02_2.fs  quest02_3.fs  utils02.fs
EveryBodyCodes_2026_GridOS1_FSharp/quest03/: quest03_1.fs  quest03_2.fs  quest03_3.fs  utils03.fs
EveryBodyCodes_2026_GridOS1_FSharp/quest04/: quest04_1.fs  quest04_2.fs  quest04_3.fs
EveryBodyCodes_2026_GridOS1_FSharp/quest05/: quest05_1.fs  quest05_2.fs  quest05_3.fs
EverybodyCodes_2024/: add-new-entry.ps1  go.mod  main.go
EverybodyCodes_2024_FSharp/: EverybodyCodes_2024_FSharp.fsproj  LocalHelper.fs  Program.fs  add-new-entry.ps1
EverybodyCodes_2024_Go/: go.mod  main.go
EverybodyCodes_2024_S1_FSharp/: EverybodyCodes_2024_S1_FSharp.fsproj  Program.fs  add-new-entry.ps1
EverybodyCodes_2024_S2_FSharp/: EverybodyCodes_2024_S2_FSharp.fsproj  Program.fs  add-new-entry.ps1
EverybodyCodes_2025_C/: CMakeLists.txt  EverybodyCodes_2025_C.c  add-new-entry.ps1
EverybodyCodes_2025_C/headers/: quests.h  utils.h
EverybodyCodes_2025_C/quest01/: quest01.h  quest01_1.c  quest01_2.c  quest01_3.c
EverybodyCodes_2025_C/templates/: cmake.txt  main.txt
EverybodyCodes_2025_C/templates/quest00/: quest00_1.c  quest00_2.c  quest00_3.c
EverybodyCodes_2025_C/utils/: utils.c
EverybodyCodes_2025_FSharp/: EverybodyCodes_2025_FSharp.fsproj  Program.fs  add-new-entry.ps1
EverybodyCodes_2025_S3_FSharp/: EverybodyCodes_2025_S3_FSharp.fsproj  Program.fs  add-new-entry.ps1
EverybodyCodes_Debugger/: EverybodyCodes_Debugger.fsproj  GameOfLife.fs  PathSolving.fs  Program.fs
(+255 files in other folders)
